[gd_scene load_steps=8 format=3 uid="uid://bo8edkyecynsp"]

[ext_resource type="Script" path="res://scene/card.gd" id="1_2savt"]
[ext_resource type="Texture2D" uid="uid://dqkmsekx8ubmn" path="res://imports/Sprite-0001.png" id="2_i3cu8"]
[ext_resource type="Texture2D" uid="uid://qng82p0f648h" path="res://imports/Leather Armor.png" id="3_i5tuw"]
[ext_resource type="Script" path="res://components/EntityStatus.gd" id="4_q2kxn"]
[ext_resource type="Script" path="res://components/EntitySkill.gd" id="5_o6yhq"]
[ext_resource type="PackedScene" uid="uid://okv00ugg3v2l" path="res://ui/healthbar.tscn" id="6_6entd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ru2u0"]
size = Vector2(11, 17)

[node name="Card" type="Area2D"]
z_index = 1
monitoring = false
script = ExtResource("1_2savt")

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("2_i3cu8")

[node name="Helment" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("3_i5tuw")
hframes = 2
vframes = 2

[node name="Armor" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("3_i5tuw")
hframes = 2
vframes = 2
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -7.5)
shape = SubResource("RectangleShape2D_ru2u0")

[node name="EntityStatus" type="Node" parent="."]
script = ExtResource("4_q2kxn")

[node name="EntitySkill" type="Node" parent="."]
script = ExtResource("5_o6yhq")

[node name="Healthbar" parent="." instance=ExtResource("6_6entd")]
offset_left = -15.0
offset_top = -40.0
offset_right = 135.0
offset_bottom = -20.0
scale = Vector2(0.2, 0.2)
value = 0.5

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="turn" from="." to="EntityStatus" method="_on_card_turn"]
[connection signal="turn" from="." to="EntitySkill" method="_on_card_turn"]
